fixed sort styles on small screens;

--- a/assets/styles/blocks/sort/sort.scss
+++ b/assets/styles/blocks/sort/sort.scss
@@ -5,6 +5,10 @@
   align-items     : center;
 }
 
+.sort__item {
+  width : 100%;
+}
+
 @media screen and (min-width : 400px) {
   .sort {
     flex-flow       : row nowrap;
@@ -19,7 +23,7 @@
 @media screen and (min-width : 850px) {
   .sort {
     flex-flow       : row nowrap;
-    justify-content : flex-end;
+    justify-content : flex-start;
   }
 
   .sort__item {
@@ -33,11 +37,7 @@
 }
 
 @media screen and (min-width : 1200px) {
-  .sort {
-    justify-content : flex-start;
-  }
-
   .sort__item {
-    width        : 50%;
+    width : 50%;
   }
 }
